# openworld_api

./: .gitignore  Diagrama sem nome.drawio  README.md  pyproject.toml
app/settings/: requirements.txt
