[tool.poetry]
name = "openworld-api"
version = "0.1.0"
description = "Api de mundo aberto"
authors = ["bruno-sotam <obruno.smatos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
alembic = "^1.15.1"
redis = "^5.2.1"
celery = "^5.4.0"
pydantic = "^2.10.6"
websockets = "^15.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
